remove raw crawled content from ui and support markdown

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "ai": "^4.1.45",
     "next": "15.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-markdown": "^10.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
