--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fal-ai/client": "^1.2.3",
     "@fal-ai/server-proxy": "^1.1.1",
     "ai": "^4.1.45",
+    "elevenlabs": "^1.51.0",
     "motion": "^12.4.7",
     "next": "15.1.7",
     "react": "^19.0.0",
